Fix spacing bug on contact page.

--- a/drumquake.css
+++ b/drumquake.css
@@ -266,7 +266,7 @@ section {
     padding-bottom: 15px;
 }
 .dates {
-    line-height: 20px
+    line-height: 20px;
     font-family: sans-serif;
     font-size: 15px;
     color: #676664;
